building tarballs and database backups work again; removed the extra inner folder when building both the demo and the site

--- a/src/demo.html
+++ b/src/demo.html
@@ -9,11 +9,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="color-scheme" content="light dark">
 
-		<link rel="shortcut icon" href="img/favicon.ico">
+		<link rel="shortcut icon" href="static/img/favicon.ico">
 
 		<link
 			rel="stylesheet"
-			href="py/static/ds.css">
+			href="static/ds.css">
 
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Griffy&display=swap&text=DimuSars" rel="stylesheet">
@@ -26,8 +26,8 @@
 			crossorigin>
 
 		<script
-			src="py/main/templates/main/detect-old-browser.js"
-			onload="loadResources('py/static/ds.js', 'py/static/ds.legacy.js', 'py/static/ds.legacy.css');"
+			src="main/templates/main/detect-old-browser.js"
+			onload="loadResources('static/ds.js', 'static/ds.legacy.js', 'static/ds.legacy.css');"
 		></script>
 	</head>
 
@@ -38,7 +38,7 @@
 				<div class="logo-text logo-text-left">Dimmu</div>
 
 				<div class="logo shadow-bottom">
-					<img src="img/dimmu-saurus.svg" alt="" />
+					<img src="static/img/dimmu-saurus.svg" alt="" />
 				</div>
 
 				<div class="logo-text logo-text-right">Saurus</div>
