.playlist-unavailable -> .no-playlist

--- a/src/demo.html
+++ b/src/demo.html
@@ -463,7 +463,7 @@
 			</div>
 
 			<div class="menu menu-playlist">
-				<div id="playlist-unavailable-label" class="playlist-unavailable-label">
+				<div id="no-playlist-label" class="no-playlist-label">
 					Playlist unavailable. Refresh the page to try again.
 				</div>
 
