total CSS refactoring - tune

--- a/src/demo.html
+++ b/src/demo.html
@@ -397,7 +397,11 @@
 				<div>
 					<h2 class="tune-title"><a href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%B8%D0%B7%D1%82%D0%B5%D0%B3%D0%BB%D0%B8/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81">Жълтият блус</a> - 3:25	</h2>
 
-					<h5 class="tune-release-date">19 октомври 2014</h5>
+					<h3 class="tune-release-info">19 октомври 2014</h3>
+
+					<h4 class="tune-original-title">
+						Originally titled: &ldquo;Yellow bluez&rdquo;
+					</h4>
 
 					<ul class="tune-links">
 						<li class="tune-play">
