readjusted the headings on all pages

--- a/src/demo.html
+++ b/src/demo.html
@@ -157,11 +157,11 @@
 					</p>
 				</article>
 
-				<h1 class="content-heading">Новини</h1>
+				<h2 class="content-heading news-heading">Новини</h2>
 
 				<article class="news">
 					<h3 class="news-title">Нова песен - "Самотният старец край езерния бряг"</h3>
-					<h4>01.08.2017</h4>
+					<h4 class="news-date"><i>01.08.2017</i></h4>
 					<p>
 						Ново кънтри-блус парче, с което се връщаме назад към древните времена, когато магията е била жива.
 					</p>
@@ -176,7 +176,7 @@
 
 				<article class="news">
 					<h3 class="news-title">Lorem Ipsum</h3>
-					<h4>23.04.1521</h4>
+					<h4 class="news-date"><i>23.04.1521</i></h4>
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis. Ut feugiat, lectus non convallis ultrices, arcu lectus posuere ligula, eget ultrices ipsum ex ac dui. Integer vitae consectetur lorem. Mauris vitae sem a sem bibendum ullamcorper quis eget leo.</p>
 
@@ -191,7 +191,7 @@
 
 				<article class="news">
 					<h3 class="news-title">Lorem Ipsum</h3>
-					<h4>23.04.1521</h4>
+					<h4 class="news-date"><i>23.04.1521</i></h4>
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis. Ut feugiat, lectus non convallis ultrices, arcu lectus posuere ligula, eget ultrices ipsum ex ac dui. Integer vitae consectetur lorem. Mauris vitae sem a sem bibendum ullamcorper quis eget leo.</p>
 
@@ -220,16 +220,16 @@
 				<article>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec orci condimentum, congue dui at, lacinia odio. Ut dapibus, purus nec lobortis interdum, erat dolor aliquam eros, eu facilisis dolor neque quis risus. Sed elementum tincidunt nibh vitae varius. Vivamus consequat placerat posuere. Nam luctus a diam non mattis.</p>
 
-					<h4>Capite primo</h4>
+					<h2>Capite primo</h2>
 					<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut quis est vitae tellus placerat interdum. Proin ante eros, efficitur sed leo id, dignissim feugiat nibh. Aliquam feugiat pellentesque diam, quis molestie libero scelerisque consequat. In facilisis vehicula nulla id volutpat. Aenean bibendum sapien lectus, at ultricies dui faucibus quis. Phasellus eu auctor risus. Phasellus placerat, est in varius imperdiet, massa sem ultricies enim, quis feugiat dolor quam ornare massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum leo ligula, cursus et lacus vel, aliquam rhoncus turpis. Fusce pretium quam at scelerisque pellentesque. Aliquam nec mauris in velit maximus cursus. Integer dignissim mollis libero at aliquet. Phasellus ultrices tellus a erat facilisis, ac interdum neque vulputate. Aliquam erat volutpat. Phasellus egestas neque non pellentesque posuere.</p>
 
-					<h4>Capite secundo</h4>
+					<h3>Capite 1.1</h3>
 					<p>Sed vitae velit vel urna bibendum tristique. Vivamus id elit in sapien pretium aliquam. Ut fringilla vulputate metus, vel tempus dolor aliquet quis. Donec posuere ex quis dui ornare, eu interdum sem accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean nisi diam, facilisis pellentesque est in, faucibus vehicula elit. Proin vel pharetra orci. Proin auctor odio metus, non scelerisque leo accumsan vitae. Praesent accumsan a purus vel malesuada.</p>
 
-					<h4>Capite tertio</h4>
+					<h3>Capite 1.2</h3>
 					<p>Donec in ullamcorper nisl. Quisque fermentum enim sit amet dui tristique, ut posuere enim dictum. Fusce scelerisque arcu risus, non porta dui lobortis ut. Integer mi nibh, imperdiet in turpis at, dignissim consequat nisi. Nunc arcu ipsum, blandit et velit vitae, feugiat blandit tortor. Integer imperdiet tincidunt nunc, nec convallis augue viverra eget. Donec dui felis, dignissim sit amet urna in, facilisis consectetur dui. Vestibulum enim ligula, tempus vitae urna nec, mattis semper neque.</p>
 
-					<h4>Capite quatro</h4>
+					<h2>Capite secundo</h2>
 					<p> Pellentesque a libero ac lacus malesuada porttitor. Integer nec faucibus ipsum. Nullam mattis sollicitudin lectus, et viverra purus rhoncus ut. Ut commodo vehicula augue vel lacinia. Mauris eu purus vitae metus congue commodo. In ut aliquam arcu. Integer blandit, nulla ac ullamcorper varius, eros est hendrerit enim, suscipit interdum eros augue id justo. Integer iaculis at urna eu luctus. Nunc iaculis tellus quis convallis vestibulum. Donec posuere egestas felis, eu dignissim orci tincidunt varius. Vestibulum hendrerit massa at iaculis vestibulum. Nam nec nibh sagittis lorem semper hendrerit in vitae tortor. Sed posuere dapibus ullamcorper. Pellentesque elementum dolor lectus, in rutrum augue varius a. Nulla quis congue nulla. Donec ultrices sollicitudin sem in efficitur.</p>
 
 				</article>
