added a theme button

--- a/src/demo.html
+++ b/src/demo.html
@@ -43,20 +43,29 @@
 
 				<div class="logo-text logo-text-right">Saurus</div>
 
-				<div class="toggle-wrapper toggle-main-menu-wrapper">
-					<button id="main-menu-button" class="header-button" title="Main Menu" aria-label="Main Menu">
-						<i class="fas fa-bars"></i>
-						<i class="fas fa-chevron-down"></i>
+				<div class="toggle-wrapper toggle-theme-wrapper">
+					<button id="theme-menu-button" class="header-button" title="Choose a Color Theme" aria-label="Choose a Color Theme">
+						<i class="fas fa-lightbulb"></i>
+						<span class="toggle-label">Theme</span>
+						<i class="icon fas fa-chevron-down"></i>
 					</button>
 				</div>
 
 				<div class="toggle-wrapper toggle-language-wrapper">
-					<button id="language-menu-button" class="header-button" title="Change Language" aria-label="Change Language">
+					<button id="language-menu-button" class="header-button" title="Change the Language" aria-label="Change the Language">
 						<i class="fas fa-language"></i>
-						<span class="toggle-language-label">Language</span>
+						<span class="toggle-label">Language</span>
+						<i class="icon fas fa-chevron-down"></i>
+					</button>
+				</div>
+
+				<div class="toggle-wrapper toggle-main-menu-wrapper">
+					<button id="main-menu-button" class="header-button" title="Main Menu" aria-label="Main Menu">
+						<i class="icon fas fa-bars"></i>
 						<i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
+
 			</div>
 
 			<div class="header-super-wrapper">
