fixed incorrect icon styles of the left menu on the demo page

--- a/src/demo.html
+++ b/src/demo.html
@@ -45,17 +45,17 @@
 
 				<div class="toggle-wrapper toggle-theme-wrapper">
 					<button id="theme-menu-button" class="header-button" title="Choose a Color Theme" aria-label="Choose a Color Theme">
-						<i class="fas fa-lightbulb"></i>
+						<i class="icon fas fa-lightbulb"></i>
 						<span class="toggle-label">Theme</span>
-						<i class="icon fas fa-chevron-down"></i>
+						<i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
 
 				<div class="toggle-wrapper toggle-language-wrapper">
 					<button id="language-menu-button" class="header-button" title="Change the Language" aria-label="Change the Language">
-						<i class="fas fa-language"></i>
+						<i class="icon fas fa-language"></i>
 						<span class="toggle-label">Language</span>
-						<i class="icon fas fa-chevron-down"></i>
+						<i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
 
