changed the non-links in the top menus to <span>

--- a/src/demo.html
+++ b/src/demo.html
@@ -75,24 +75,24 @@
 					<div class="menu menu-theme-choice menu-closed shadow-bottom no-theme">
 						<ul>
 							<li>
-								<a class="menu-item" onclick="Theme.select(undefined);">
+								<span class="menu-item" onclick="Theme.select(undefined);">
 									<i class="icon fas fa-desktop"></i>
 									Като устройството
-								</a>
+								</span>
 							</li>
 
 							<li>
-								<a class="menu-item" onclick="Theme.select(0)">
+								<span class="menu-item" onclick="Theme.select(0)">
 									<i class="icon fas fa-sun"></i>
 									Светъл
-								</a>
+								</span>
 							</li>
 
 							<li>
-								<a class="menu-item" onclick="Theme.select(1)">
+								<span class="menu-item" onclick="Theme.select(1)">
 									<i class="icon fas fa-moon"></i>
 									Тъмен
-								</a>
+								</span>
 							</li>
 						</ul>
 					</div>
@@ -140,11 +140,11 @@
 								</a>
 							</li>
 							<li>
-								<a id="music-button" class="menu-item" aria-label="Go to discography page">
+								<span id="music-button" class="menu-item" aria-label="Go to discography page">
 									<i class="icon fas fa-music"></i>
 									Музика
 									<i class="fas fa-chevron-down"></i>
-								</a>
+								</span>
 							</li>
 						</ul>
 
