--- a/src/demo.html
+++ b/src/demo.html
@@ -666,11 +666,14 @@
 
 		<div class="player shadow-top">
 			<audio onended="Player.next()"></audio>
+
 			<button
 				id="pl-playlist-toggle"
 				title="Toggle Playlist"
 				aria-label="Toggle Playlist"
-				class="player-button playlist"><i class="fas fa-chevron-up"></i></button>
+				class="player-button playlist">
+					<i class="fas fa-chevron-up"></i>
+			</button>
 
 				<div class="loading-indicator">
 					<div class="player-loading-spinner"></div>
@@ -705,22 +708,29 @@
 					id="pl-volume"
 					title="Sound Volume"
 					aria-label="Mute/Unmute music"
-					class="player-button volume fas fa-volume-up"></button><button
+					class="player-button volume fas fa-volume-up">
+				</button>
+				<button
 					id="pl-previous"
 					title="Previous Track"
 					aria-label="Play previous song"
 					onclick="Player.previous()"
-					class="player-button fas fa-step-backward"></button><button
+					class="player-button fas fa-step-backward">
+				</button>
+				<button
 					id="pl-play"
 					title="Play / Pause"
 					aria-label="Play/Pause current song"
 					onclick="Player.playToggle()"
-					class="player-button fas fa-play"></button><button
+					class="player-button fas fa-play">
+				</button>
+				<button
 					id="pl-next"
 					title="Next Track"
 					aria-label="Play next song"
 					onclick="Player.next()"
-					class="player-button fas fa-step-forward"></button>
+					class="player-button fas fa-step-forward">
+				</button>
 			</div>
 		</div>
 
