fixed the social icons layout, not to be affected by whitespace anymore

--- a/src/demo.html
+++ b/src/demo.html
@@ -632,27 +632,38 @@
 			</div>
 		</div>
 
-		<!-- Whitespace ruins alignment, so <a> tags had to be compressed -->
 		<footer class="shadow-top">
 			<div class="social">
 				<div class="social-label">Follow:</div>
 				<div class="social-icons">
+
 					<a
 						title="Dimmu Saurus on Facebook"
 						aria-label="Go to Dimmu Saurus Facebook page"
 						href="https://www.facebook.com/dimmusaurus/"
 						target="_blank"
-						rel="me noopener"><i class="fab fa-facebook-square"></i></a><a
+						rel="me noopener">
+							<i class="fab fa-facebook-square"></i>
+					</a>
+
+					<a
 						title="Dimmu Saurus Youtube channel"
 						aria-label="Go to Dimmu Saurus Youtube channel"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
 						target="_blank"
-						rel="me noopener"><i class="fab fa-youtube"></i></a><a
+						rel="me noopener">
+							<i class="fab fa-youtube"></i>
+					</a>
+
+					<a
 						title="Dimmu Saurus Soundcloud page"
 						aria-label="Go to Dimmu Saurus Soundcloud page"
 						href="https://soundcloud.com/beeuisri12mz"
 						target="_blank"
-						rel="me noopener"><i class="fab fa-soundcloud"></i></a>
+						rel="me noopener">
+							<i class="fab fa-soundcloud"></i>
+					</a>
+
 				</div>
 			</div>
 
